# nQueens

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp  nQueensCpp.sln  nQueensCpp.vcxproj  nQueensCpp.vcxproj.filters
Board/: Board.cpp  Board.h  BoardPrinter.cpp  BoardPrinter.h
ConsoleInput/: GetIntFromConsole.cpp  GetIntFromConsole.h
Coordinates/: CoordinateServiceI.h  ICoordinateService.h  RandomUniqueCoordinateService.cpp  RandomUniqueCoordinateService.h
Diagonal/: Diagonal.cpp  Diagonal.h
FrameBuffer/: FrameBuffer.cpp  FrameBuffer.h
NQueensSolver/: NQueensSolver.cpp  NQueensSolver.h
Queen/: Queen.cpp  Queen.h  QueenContainer.cpp  QueenContainer.h
x64/Debug/: nQueensCpp.exe.recipe  nQueensCpp.ilk  nQueensCpp.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/nQueensCpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  nQueensCpp.lastbuildstate
